--- a/angular.json
+++ b/angular.json
@@ -165,5 +165,8 @@
     "@ionic/angular-toolkit:page": {
       "styleext": "css"
     }
+  },
+  "cli": {
+    "analytics": "90a80df1-a4c0-4aae-a0e2-ea47eccbdecb"
   }
 }
