--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "^19.1.0",
     "@ionic/angular": "^8.4.2",
     "ionicons": "^7.4.0",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
