--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@heroicons/react": "^2.2.0",
     "@ionic/angular": "^8.4.2",
     "ionicons": "^7.4.0",
     "jwt-decode": "^4.0.0",
