--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@ionic/angular": "^8.4.2",
     "ionicons": "^7.4.0",
     "jwt-decode": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
+    "url": "^0.11.4",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
