--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,9 @@
               "buildTarget": "puntoSafa:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
